// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterWidget when cluster is offline matches snapshot 1`] = `
<div
  className="column is-full-modile is-6"
>
  <div
    className="box"
  >
    <div
      className="title is-6 has-text-overflow-ellipsis"
    >
      <div
        className="tag has-margin-right is-danger"
      >
        offline
      </div>
      local
    </div>
    <table
      className="table is-fullwidth"
    >
      <tbody>
        <tr>
          <th>
            Brokers
          </th>
          <td>
            <NavLink
              to="/ui/clusters/local/brokers"
            >
              1
            </NavLink>
          </td>
        </tr>
        <tr>
          <th>
            Partitions
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <th>
            Topics
          </th>
          <td>
            <NavLink
              to="/ui/clusters/local/topics"
            >
              2
            </NavLink>
          </td>
        </tr>
        <tr>
          <th>
            Production
          </th>
          <td>
            <BytesFormatted
              value={8000.00000673768}
            />
          </td>
        </tr>
        <tr>
          <th>
            Consumption
          </th>
          <td>
            <BytesFormatted
              value={0.815306356729712}
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ClusterWidget when cluster is online matches snapshot 1`] = `
<div
  className="column is-full-modile is-6"
>
  <div
    className="box"
  >
    <div
      className="title is-6 has-text-overflow-ellipsis"
    >
      <div
        className="tag has-margin-right is-success"
      >
        online
      </div>
      secondLocal
    </div>
    <table
      className="table is-fullwidth"
    >
      <tbody>
        <tr>
          <th>
            Brokers
          </th>
          <td>
            <NavLink
              to="/ui/clusters/secondLocal/brokers"
            >
              1
            </NavLink>
          </td>
        </tr>
        <tr>
          <th>
            Partitions
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th>
            Topics
          </th>
          <td>
            <NavLink
              to="/ui/clusters/secondLocal/topics"
            >
              3
            </NavLink>
          </td>
        </tr>
        <tr>
          <th>
            Production
          </th>
          <td>
            <BytesFormatted
              value={0.00003061819685376472}
            />
          </td>
        </tr>
        <tr>
          <th>
            Consumption
          </th>
          <td>
            <BytesFormatted
              value={5.737800890036267}
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
